--- a/PersonalDump/style.css
+++ b/PersonalDump/style.css
@@ -14,3 +14,29 @@ html,body{
     align-items: center;
     justify-content: space-around;
 }
+
+.box1 {
+    background-color: #00852c;
+    width: 40%;
+    height: 15%;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box2 {
+    background-color: #00852c;
+    width: 40%;
+    height: 40%;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
